# llp_lab1

./: CMakeLists.txt  Makefile  Makefile.linux  README.md  data_types.c  database.c  database_struct.c  file.c  main.c  schema.c  table.c  table_struct.c  test.c
include/: data_types.h  database_include.h  file.h  schema.h  table_include.h  test.h
struct/: database.h  database_struct.h  query.h  table.h  table_struct.h
